remove-virtual (#2522)
* remove-virtual

* Update ChannelCreationListener.java

* Update Game.java