@@ -42,10 +42,10 @@ public class ButtonProcessor {
     private boolean running = true;
 
     private ButtonProcessor() {
-        worker = Thread.startVirtualThread(() -> {
+        worker = new Thread(() -> {
             while (running || !buttonInteractionQueue.isEmpty()) {
                 try {
-                    ButtonInteractionEvent buttonInteractionEvent = buttonInteractionQueue.poll(1, TimeUnit.SECONDS);
+                    ButtonInteractionEvent buttonInteractionEvent = buttonInteractionQueue.poll(2, TimeUnit.SECONDS);
                     if (buttonInteractionEvent != null) {
                         process(buttonInteractionEvent);
                     }
@@ -57,6 +57,10 @@ public class ButtonProcessor {
                 }
             }
         });
+    }
+
+    public static void start() {
+        instance.worker.start();
     }
 
     public static boolean shutdown() {
